--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-10-15    <tromo@spade.biophysics.rochester.edu>
+
+	* Added AtomicGroup::clearBonds() to wipe out connectivity in a group.
+	* Fixed problem in writing PDBs with bonds to missing atoms.
+	Bonds are now deferenced prior to writing.  NOTE that this now
+	means the PDB is no longer const when written and it will be sorted...
+
 2008-10-14    <tromo@spade.biophysics.rochester.edu>
 
 	* Fixed bug in width of CONECT record fields
