--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-10-21    <tromo@spade.biophysics.rochester.edu>
+
+	* Updated contacts to use any model filetype and any trajectory type.
+
+2008-10-20    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed MAJOR bug in DCDWriter that caused output periodic box
+	sizes be set to (1,1,1).
+
 2008-10-15    <tromo@spade.biophysics.rochester.edu>
 
 	* Added AtomicGroup::clearBonds() to wipe out connectivity in a group.
