--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-03    <alan@spade.biophysics.rochester.edu>
+
+	* Fixed bug in crossing-waters tool where the entry side of the
+	water was never set.
+
 2008-10-31    <tromo@spade.biophysics.rochester.edu>
 
 	* Fixed bug in Atom::clearPropertyBit() that caused it to
