Changed a few internal prototypes to be more prototype-ey and to use references to strings rather than copy the strings...  (dubious improvement)
Overloaded the parsing functions to work with either a string and a
range or just a string.

Added PDB::emptyString() function to check to see if a string contains
only spaces.

Changed PDB::parseConectRecord() to use fixed fields rather than
splitting based on spaces.  This should solve many of the problems
I've had with large PDBs.  Does not yet explicitly flag overflow
conditions...





svn path=/software/LOOS/trunk/; revision=1285

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-11-21    <tromo@spade.biophysics.rochester.edu>
+
+	* Changed BadConnectivity exception to inherit from runtime_error.
+	Now accepts a string to stick into what().
+	* Changed CONECT record reading to use fixed field widths
+
 2008-11-03    <alan@spade.biophysics.rochester.edu>
 
 	* Fixed bug in crossing-waters tool where the entry side of the
