--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-11-25    <tromo@spade.biophysics.rochester.edu>
+
+	* Changed AtomicGroup::splitByMolecule() to short-circuit if the
+	group has no bond connectivity and return a vector with the entire
+	group as its only member.
+	* Changed Tools/reimage-by-molecule to be more generic in what
+	types of files it will take.  Since you could now give it a file
+	without connectivity, it detects this and warns the user...
+
 2008-11-21    <tromo@spade.biophysics.rochester.edu>
 
 	* Changed BadConnectivity exception to inherit from runtime_error.
