Moved most of the things related to the parser into the loos::internal namespace
svn path=/software/LOOS/branches/matrix-081204/; revision=1425

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-12-08    <tromo@spade.biophysics.rochester.edu>
+
+	* Moved most of the internal classes/routines related to the
+	parsing system into the loos::internal namespace.
+
 2008-12-05  Tod Romo  <tromo@gorgoneion-w>
 
 	* Moved Matrix classes into loos::Math namespace
