--- a/loos.dox
+++ b/loos.dox
@@ -49,7 +49,9 @@ For assistance using LOOS, to suggest a patch, to request a feature, or simply
 to offer positive feedback, email LOOS-maintainer [AT] urmc.rochester.edu.  The
 latest version of LOOS can be found at <A
 HREF="http://loos.sourceforge.net">
-http://loos.sourceforge.net</A>.
+http://loos.sourceforge.net</A>.  Information regarding the latest
+changes are available here:
+	\subpage Changes "Change Log"
 
 \section Features
 One of the features of LOOS is the multiple ways it supports atom
@@ -583,3 +585,13 @@ averaging over the whole trajectory.
 
 */
 
+
+
+
+/*! \page Changes Change Log
+\section Major Changes
+
+Change log here...
+
+
+*/
