--- a/loos.dox
+++ b/loos.dox
@@ -589,9 +589,180 @@ averaging over the whole trajectory.
 
 
 /*! \page Changes Change Log
-\section Major Changes
+\section release130 Version 1.3.0 (12-9-2008)
 
-Change log here...
+\subsection r130_namespace Namespace Changes
+This release represents some major changes to the internal structure
+of LOOS.  First and foremost, virtually all of LOOS is now
+encapsulated within the "loos" namespace whereas before much of loos
+was in the global namespace.  This means that <tt>Atom a;</tt>
+becomes <tt>loos::Atom a;</tt>.  Alternatively, you can place a using
+directive at the top of your code,
+\code
+using namespace loos;
 
+Atom a;
+\endcode
+
+LOOS also now respects your global namespace by not forcing the
+importation of names that it uses, such as from the \c std namespace
+or \c boost.  In fact, in versions prior to 1.3.0, LOOS would import
+\c std into the global namespace.  If you were relying on this
+behavior, you will now need to manually import in your code.  We
+therefore recommend that you add the following to the start of all of
+your code:
+\code
+using namespace std;
+using namespace loos;
+\endcode
+
+Another \b major change in version 1.3.0 is the matrix handling code.
+There is now a generic \c loos::Math::Matrix class that supports several different
+ways of laying out the raw data (i.e. row major vs column major) and
+can even support sparse storage.  This class in in the \c loos::Math
+namespace.  It is important to note that the goal of this class is to
+provide a controllable wrapper around a block of memory for
+interfacing with ATLAS.  It is not meant to be a generic matrix in a
+mathematical sense, despite being located in the \c loos::Math
+namespace.  The polymorphic matrix I/O classes (i.e. \c MatrixReader and
+\c MatrixWriter) are now gone, replaced by template functions \c
+loos::writeAsciiMatrix() and \c loos::readAsciiMatrix().  The format used is just
+a block of ASCII data that can be read in my Octave/MATLAB and
+GnuPlot.  These reading and writing functions are in the \c loos
+namespace, not the \c loos::Math namespace.  The reason for this is to
+support the following pattern,
+\code
+using namespace std;
+using namespace loos;
+
+typedef Math::Matrix<double, Math::Triangular> Matrix;
+...
+Matrix M;
+writeAsciiMatrix(filename, M, "My matrix");
+\endcode
+
+Additionally, math functions that were at a global scope, such as \c angle() and \c
+torsion() are now in the \c loos::Math namespace.
+
+\subsection r130_added_changed Added or Altered Functionality
+
+<UL>
+ <LI> The ensemble functions (such as \c loos::averageStructure()) now
+ take a \c loos::pTraj instead of a reference to a \c
+ loos::Trajectory&.
+ <LI> Many of the tools now use the boost program_options library
+ <LI> The alignment tool (<tt>aligner</tt>) now writes out the average
+ structure as well, and has an option to center the aligned
+ trajectory.
+ <LI> Added <tt>subsetter</tt> tool that pulls a subset of a model out
+ of a trajectory into a new, smaller trajectory.
+ <LI> The \c PDB reader now only emits warnings for each unique
+ unknown record read rather than a whole mess of 'em...
+</UL>
+
+\subsection r130_bugs Bug Fixes
+<UL>
+ <LI> \c AtomicGroup::splitByMolecule() now handles groups without
+ connectivity.
+ <LI> Fixed a problem with the PDB reading code that mangled wide
+ CONECT records.
+</UL>
+
+
+
+<hr>
+
+\section release121 Version 1.2.1 (11-3-2008)
+\subsection r121_bugs Bug Fixes
+<UL>
+ <LI> Fixed bug in crossing-waters tool
+ <LI> Fixed bug in \c loos::Atom::clearPropertyBit() that caused it to
+ not always toggle the correct bit.
+</UL>
+
+
+<hr>
+
+
+\section release120 Version 1.2.0 (10-24-2008)
+\subsection r120_changes Changes
+<UL>
+ <LI>Added <tt>helix_kink</tt> tool to determine bend-angles in
+ helices.
+ <LI> Added \c HeavySolventSelector
+ <LI> Updated tools to use new convenience/factory functions, also
+ making them a tad more universal in what inputs they can take.
+ <LI> Added \c AtomicGroup::clearBonds() to remove connectivity in a
+ group.
+ <LI> \c PDB will out write out CONECT records when there are 10K
+ atoms or greater, to prevent field overflow.
+ <LI> \c Coord<T> can now extract itself from a stream.
+ <LI> Added \c loos::selectAtoms() to parse a selection string and
+ apply it to an \c AtomicGroup.
+ <LI> Added support for writing out \c PDB CONECT records.
+
+</UL>
+
+\subsection r120_bugs Bug Fixes
+<UL>
+ <LI> Fixed problem with \c PDB output when there are more than 10K
+ residues
+ <LI> Fixed bug in \c DCDWriter that caused the output periodic
+ box to be set to (1,1,1) regardless of what was passed in.
+ <LI> Fixed problem when writing a \c PDB with bonds to missing
+ atoms.  Bonds are now dereferenced prior to writing.  This means that
+ the \c PDB is now no longer const when written and could be sorted.
+ <LI> Fixed bug in width of CONECT record fields
+ <LI> Fixed bug in \c DCD trajectories affecting seeking frames
+ <LI> Fixed bug in \c DCD trajectories potentially affecting the
+ number of frames sensed in a trajectory that comes from NAMD.
+ <LI> Fixed bug in \c Atom::checkProperty() that caused
+ erroneous results.
+</UL>
+
+
+<hr>
+
+\section release110 Version 1.1.0 (9-12-2008)
+\subsection r110_changes Changes
+<UL>
+ <LI> Major reorganization of the \c Trajectory class using a template
+ pattern.
+ <LI> Added \c CCPDB class for concatenated PDBs that you can treat as
+ a \c Trajectory
+ <LI> Added \c PDBTraj class for handling non-contiguous PDB
+ trajectories
+ <LI> Added \c TinkerArc class for TinkerArc (concatenated XYZ files)
+ trajectories
+ <LI> Changed \c Atom defaults to initialize atomid and resid to 1
+ rather than -1
+ <LI> Added tool to compute the RMSD between a selection and its
+ average structure over the course of a trajectory
+ <LI> Improved self-tests
+ <LI> Added a new tool to reimage a trajectory by molecule
+ <LI> Added \c AtomicGroup::apply() to call a functor or a function
+ pointer on each \c Atom in an \c AtomicGroup.
+ <LI> \c DCDWriter now long requires you to specify how many frames
+ will be written--you can append and it will automatically update the
+ header correctly.
+</UL>
+
+
+\subsection r110_bugs Bug Fixes
+<UL>
+ <LI> Fixed problem with typedefs in MacOS 10.5
+ <LI> Fixed bug in \c ATom where setting coords using a \c GCoord ref
+ not correctly setting the coords-bit.
+ <LI> Fixed big in <tt>aligner</tt> where the first frame of the DCD
+ was not transformed.
+ <LI> Fixed bug in \c AtomicGroup::splitByMolecule() where the \c
+ PeriodicBox was not propagated beyond the first group split.
+ <LI> Fixed bug in <tt>svdcolmap</tt> tool that affected certain
+ instances of using atomid maps.
+ <LI> Fixed bug in \c loos::iterativeAlignment() where the returned \c
+ XForms were incorrect.  The passed ensemble of \c AtomicGroup objects
+ were correctly transformed, but anything that used the \c XForms were
+ affected by varying degrees.
+</UL>
 
 */
