--- a/loos.dox
+++ b/loos.dox
@@ -471,7 +471,7 @@ formats), but some still specifically assume CHARMM formats.  These are
 mostly membrane-specific programs, which we felt are less likely to be used
 with Amber formats. 
 
-NOTE: At present, LOOS assumes that all periodic boxes are rectagular, and
+NOTE: At present, LOOS assumes that all periodic boxes are rectangular, and
 will produce incorrect answers if trajectories using different box shapes
 (eg truncated octahedron) are used in programs which make use of
 periodicity (eg rdf).
@@ -488,7 +488,7 @@ Transform an Amber trajectory file into a CHARMM/NAMD dcd file.
 
 \section amber2pdb amber2pdb
 
-Tranform an Amber parmtop file into a pdb file.
+Transform an Amber parmtop file into a pdb file.
 
 \section atomic-rdf atomic-rdf
 
@@ -600,6 +600,18 @@ averaging over the whole trajectory.
 
 
 /*! \page Changes Change Log
+\section release131 Version 1.3.1 (1-14-2009)
+\subsection r131_bugs Bug Fixes
+<UL>
+ <LI>Fixed bug affecting MacOS X 10.5 builds.
+ <LI>Aligner wrote out its reference PDB uncentered even if given the
+ "--center" flag.
+ <LI>Aligner did not correctly compute average structure unless the
+ "--rmsd" flag was given.
+ <LI>The "--terms" flag for the svd tool was inadvertently removed.
+</UL>
+
+
 \section release130 Version 1.3.0 (12-22-2008)
 
 \subsection r130_namespace Namespace Changes
