--- a/loos.dox
+++ b/loos.dox
@@ -482,14 +482,6 @@ Align structures in a trajectory against the average using an
 iterative refinement scheme.  Can read any LOOS trajectory format, but
 will write the aligned trajectory as a DCD.
 
-\section amber2dcd amber2dcd
-
-Transform an Amber trajectory file into a CHARMM/NAMD dcd file.
-
-\section amber2pdb amber2pdb
-
-Transform an Amber parmtop file into a pdb file.
-
 \section atomic-rdf atomic-rdf
 
 Compute the radial distribution function for 2 selections of atoms taken
@@ -503,39 +495,69 @@ using an iterative scheme.
 
 \section bounding bounding
 
-Write out the bounding box for a selection of atoms from a pdb file.
+Write out the bounding box for a selection of atoms from a structure file.
 
 \section center-pdb center-pdb
 
-Read in a pdb file, shift its centroid to the origin, and write a new
-pdb file to stdout.  Currently assumes PSF and DCD formats.
+Read in a structure file, shift its centroid to the origin, and write a new
+pdb file to stdout.  
 
 \section contacts contacts
 
 Loop over a trajectory and count the number of contacts between two
-sets of atoms.  Currently assumes PSF and DCD formats.
+sets of atoms.  
+
+\section convert2pdb convert2pdb
+
+Read in a structure file in a LOOS-supported format, and write it out as 
+a pdb file.
 
 \section crossing-waters crossing-waters
 
 Loop over a trajectory and compute the number waters crossing a membrane.
-Currently assumes PSF and DCD formats.
 
 \section dcdframe2pdb dcdframe2pdb
 
 Extract a frame from a CHARMM/NAMD dcd trajectory file and write it as a pdb 
 file.
 
+\section dcdinfo dcdinfo
+
+Extract the header information from a CHARMM/NAMD dcd file.
+
 \section density-dist density-dist
 
 Compute the charge/electron/mass density distribution for the system along
 the z-axis. Produces the distribution for the whole system and an arbitrary
-number of selections.  Currently assumes PSF and DCD formats.
+number of selections.  Requires a structure file format which supplies 
+mass and/or charge.
 
 \section density-dist-windowed density-dist-windowed
 
 Compute the charge/electron/mass density distribution for the system along
 the z-axis for blocks of time within a trajectory, producing a density
 distribution time series.  Currently assumes PSF and DCD formats.
+
+\section frame2pdb
+
+Extract a frame from a trajectory and write it as a pdb file.
+
+\section helix_kink helix_kink
+
+Given two selections and a trajectory, compute the time series of the 
+angle between their principal components.
+
+\section model-select model-select
+
+Takes a model (PDB, PSF, etc) and a selection string.  Parses the selection,
+then applies it to the PDB and writes the output to stdout.  This tool is used
+maily for checking your selection strings to make sure you're actually
+selecting what you intend to select...
+
+\section model2matlab model2matlab
+
+Takes a PDB and a selection and an optional selection and writes out
+the coordinates to stdout in matlab format.
 
 \section octavex octavex
 
@@ -544,17 +566,7 @@ Extract embedded OCTAVE data from a LOOS output/log.
 \section order_params order_params
 
 Compute the deuterium quadrupolar splitting order parameters for lipid
-molecules.  Currently assumes PSF and DCD formats.
-
-\section pdb2matlab pdb2matlab
-
-Takes a PDB and a selection and an optional selection and writes out the
-coordinates to stdout in matlab format.
-
-\section pdbselect pdbselect
-
-Given a selection string and a pdb file, print out the selected atoms.
-Very useful for testing and debugging complex selection strings.
+molecules.  The model file must have connectivity information.
 
 \section rdf rdf
 
@@ -564,10 +576,39 @@ of mass is used.  For example, selecting all water molecules will cause it
 to compute the radial distribution of the centers of mass of individual
 water molecules.  For contrast, see atomic-rdf.
 
+\section recenter-trj
+
+Loop over a trajectory, translating the entire system such that the selected
+portion remains at the origin, and reimaging the rest on a molecule by 
+molecule basis.  It can also just do translations in the z-dimension.  The
+model file must have connectivity information, and the trajectory must have
+periodic box information.  This program writes a DCD file as output.
+
+\section reimage-by-molecule reimage-by-molecule
+
+Reads a trajectory, and writes a new DCD which has been reimaged on a molecule
+by molecule basis.  The model file must have connectivity information, and the
+trajectory must have periodic box information.
+
+\section rgyr rgyr
+
+Loop over a trajectory and compute the radius of gyration for a selection of 
+atoms.  Optionally, it can break your selection into individual molecules, 
+if for example you have multiple solutes in the system.
+
+\section rmsd2ref
+
+Computes rmsds between a selection and either its average conformation or a
+reference model, optionally aligning the selection.
+
 \section rmsds rmsds
 
 Loops over a trajectory and computes the pairwise RMSDs for a selection of
 atoms.
+
+\section subsetter subsetter
+
+Subsets a trajectory (stripping out any atoms that don't match the given selection), and writes a new DCD file.
 
 \section svd svd
 
@@ -582,12 +623,20 @@ Map the magnitude of a left singular vector onto a PDB file's B-value
 column.  Useful for visualizing which portions of a molecule are mobile for
 a given SVD mode.
 
+\section torsion torsion
+
+Given 4 selections, compute the torsion angle for their centroids.  This 
+program loops over a trajectory and writes the torsion angle time series.
+
+\section traj2dcd
+
+Converts a LOOS-supported format to a DCD.
+
 \section xy_rdf xy_rdf
 
 Compute a two dimension radial distribution function in the xy plane,
 splitting the system into upper and lower leaflets.  Primarily intended for
-analyzing lateral organization of lipid-water interfaces.  Currently assumes
-PSF and DCD formats.
+analyzing lateral organization of lipid-water interfaces.  
 
 \section xy_rdf_timeseries xy_rdf_timeseries
 
