--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2009-02-06    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in SVD tool that would cause an error when using a PSF
+	for the model.
+	* Added verification of the number of frames in a trajectory with
+	trajinfo.
+	* Added optional centroid reporting for trajinfo
+	* Added improved error-checking when using
+	loos::averageStructure().  This catches cases where a trajectory
+	header and the physical trajectory have differing number of
+	frames.
+	* Added generic byte-swapping templated function to utils.hpp
+	
+
 2009-02-05    <tromo@spade.biophysics.rochester.edu>
 
 	* Added tool to concatenate atoms together from a trajectory into
