Found several other instances of tools that could have problems when using a PSF for input with a selection applied...
Updated docs as well...

svn path=/software/LOOS/trunk/; revision=1702

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2009-02-06    <tromo@spade.biophysics.rochester.edu>
 
-	* Fixed bug in SVD tool that would cause an error when using a PSF
-	for the model.
+	* Fixed bug in several tools that could cause an error when
+	using a PSF for the model and applying a selection to it.
 	* Added verification of the number of frames in a trajectory with
 	trajinfo.
 	* Added optional centroid reporting for trajinfo
