--- a/loos.dox
+++ b/loos.dox
@@ -493,6 +493,10 @@ For contrast, see rdf.
 Compute the average structure for a set of molecules from a trajectory,
 using an iterative scheme.
 
+\section blurrogram blurrogram.pl
+
+A PERL tool for creating "blurrogram" style figures with Pymol.
+
 \section bounding bounding
 
 Write out the bounding box for a selection of atoms from a structure file.
@@ -684,7 +688,7 @@ averaging over the whole trajectory.
   files
   <LI> The DCDWriter class will now flush the output streams after
   each frame is written to ensure all data is actually written to disk
-<UL>
+</UL>
 
 \subsection r133_bugs Bug Fixes
 <UL>
@@ -702,7 +706,10 @@ averaging over the whole trajectory.
   trajectory.  This results in a segmentation fault when the
   trajectory has a bad header (i.e. the number of frames listed does
   not reflect the number of frames actually in the trajectory).  This
-  case is now checked for and a slightly more sensible error is thrown.
+  case is now checked for and a slightly more sensible error is
+  thrown.
+  <LI> The error messages given when the LOOS could not decide what
+  format a file is in were vague...this has been improved...
 </UL>
 
 \section release132 Version 1.3.2 (1-20-2009)
