--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2009-02-24    <tromo@spade.biophysics.rochester.edu>
+
+	* Added a set of classes for providing flexible progress updates
+	to the user.  See the Doxygen docs for the ProgressCounter class
+	for more information.  See Tools/rmsds.cpp for an example of how
+	to use the new classes.
+	* Removed BOOST_FOREACH usage.  This solves a compatability issue
+	with older versions of BOOST.
+
 2009-02-20  Tod Romo  <tromo@gorgoneion-w>
 
 	* Added rotamer tool to calculate chi-1, chi-2 torsion angles over
