--- a/loos.dox
+++ b/loos.dox
@@ -10,7 +10,7 @@
 \section copyright Copyright and License
 
 <I>LOOS (Lightweight Object-Oriented Structure library)</I>\n
-Copyright &copy; 2008, Tod D. Romo, Alan Grossfield\n
+Copyright &copy; 2008-2009, Tod D. Romo, Alan Grossfield\n
 Department of Biochemistry and Biophysics\n
 School of Medicine & Dentistry, University of Rochester\n
 
