Amber RST support finalized.
Magical incorporation of coords by createSystem(), when using a PRMTOP
and an INPCRD exists with the same name, has been removed.

Removed the obsolete Amber::readCoords()

Discovered an esoteric issue with Trajectory::cached_first that can
cause problems.  Granted, it's esoteric, but it suggested that this
mechanism was fragile.  Solving this required adding conditions on
functions that could perturb the cache status, i.e. the two seeks and
the rewind function.  These functions all now use NVI (or private
inheritance)...


svn path=/software/LOOS/trunk/; revision=1999

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2009-05-15    <tromo@spade.biophysics.rochester.edu>
+
+	* Added support for Amber RST and INPCRD files as a single-frame
+	trajectory.  This is handled transparently by createTrajectory()
+	* Changed the Trajectory interface slightly...  Seeking and
+	rewinding now use non-virtual inheritance so that conditions can
+	be imposed on the function invocation (namely to invalidate the
+	cached_first flag).  This change SHOULD be transparent
+
 2009-05-13    <tromo@spade.biophysics.rochester.edu>
 	* Fixed problem with averager where it was caching all frames of
 	the trajectory.  It will now scan through the trajectory so it
